compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__error_message_on_variable_starting_with_underscore.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1677
expression: "\n  pub fn main() {\n    let val = _func_starting_with_underscore(1)\n  }"
snapshot_kind: text
---
----- SOURCE CODE

  pub fn main() {
    let val = _func_starting_with_underscore(1)
  }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:15
  │
3 │     let val = _func_starting_with_underscore(1)
  │               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ I'm expecting a lowercase name here

Hint: Variable and module names start with a lowercase letter, and can contain
a-z, 0-9, or _.
