compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__function_type_invalid_param_type.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1308
expression: "\nfn f(g: fn(Int, 1) -> Int) -> Int {\n  g(0, 1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn f(g: fn(Int, 1) -> Int) -> Int {
  g(0, 1)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:17
  │
2 │ fn f(g: fn(Int, 1) -> Int) -> Int {
  │                 ^ I was not expecting this

Found an Int, expected one of: 
- `)`
- a type
