compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__inner_single_quote_parses.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1026
expression: "\nlet a = \"inner 'quotes'\"\n"
snapshot_kind: text
---
[
    Assignment(
        Assignment {
            location: SrcSpan {
                start: 1,
                end: 25,
            },
            value: String {
                location: SrcSpan {
                    start: 9,
                    end: 25,
                },
                value: "inner 'quotes'",
            },
            pattern: Variable {
                location: SrcSpan {
                    start: 5,
                    end: 6,
                },
                name: "a",
                type_: (),
                origin: VariableOrigin {
                    syntax: Variable(
                        "a",
                    ),
                    declaration: LetPattern,
                },
            },
            kind: Let,
            compiled_case: CompiledCase {
                tree: Fail,
                subject_variables: [],
            },
            annotation: None,
        },
    ),
]
