compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__invalid_left_paren_in_case_clause_guard.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1465
expression: "\nlet my_string = \"hello\"\ncase my_string {\n    _ if string.length( > 2 -> io.debug(\"doesn't work')\n}"
snapshot_kind: text
---
----- SOURCE CODE

let my_string = "hello"
case my_string {
    _ if string.length( > 2 -> io.debug("doesn't work')
}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:4:23
  │
4 │     _ if string.length( > 2 -> io.debug("doesn't work')
  │                       ^ I was not expecting this

Found `(`, expected one of: 
- `->`
Hint: Did you mean to wrap a multi line clause in curly braces?
